# Secure-Voice-Calls

./: .gitignore  README.md
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  client.cpp  client.h  conanfile.txt  main.cpp  qml.qrc
src/Client/Design/: Authorization.qml  AuthorizationItem.qml  Authotization.qml  Background.qml  CallButton.qml  ClientsList.qml  ClientsModel.qml  RefreshButton.qml  main.qml
src/Client/Design/Authorization/: Authorization.qml
src/Client/Design/InConversation/: InConversation.qml
src/Client/Design/IncomingCall/: IncomingCall.qml
src/Client/Design/MissedCalls/: ClearButton.qml  MissedCalls.qml  MissedCallsList.qml
src/Client/Design/NotificationManager/: NotificationManager.qml
src/Client/Design/Online/: CallButton.qml  ClientsList.qml  Online.qml  RefreshButton.qml
src/Client/Design/OutgoingCall/: OutgoingCall.qml
src/Client/Headers/: audiomodule.h  audioreader.h  audiowriter.h  client.h  peertopeer.h  qmlclientsonlinemodel.h  qmlclientstate.h  qmlmissedcallsmodel.h  utils.h
src/Client/Sources/: audiomodule.cpp  audioreader.cpp  audiowriter.cpp  client.cpp  main.cpp  peertopeer.cpp  qmlclientsonlinemodel.cpp  qmlclientstate.cpp  qmlmissedcallsmodel.cpp  utils.cpp
src/Common/: client-server.proto
src/GRPC/: CMakeLists.txt
src/Server/: CMakeLists.txt  main.cpp  server.cpp  server.h
src/Tests/: CMakeLists.txt  PlayerTests.cpp  PlayerTests.h  RecorderTests.cpp  RecorderTests.h
src/Tools/: CMakeLists.txt
src/Tools/Headers/: commandArgsParser.h  player.h  utils.h
src/Tools/Sources/: commandArgsParser.cpp  player.cpp  recorder.cpp  utils.cpp
src/Tools/player/: CMakeLists.txt  player.cpp  player.h
src/Tools/recorder/: CMakeLists.txt  recorder.cpp  recorder.h
src/cmake/: conan.cmake  conan_setup.cmake  config.cmake
src/conan/: conanfile.txt
